--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,55 @@
-# 仮想環境
-.venv/
-env/
-
-# キャッシュファイル
+# Python
 __pycache__/
 *.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+.env/
+.venv/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# 設定ファイル
-*.env
-
-# Jupyter Notebook チェックポイント
-.ipynb_checkpoints/
-
-# 出力ファイル
-outputs/
-
-# Cursor関連（プロジェクトの設定ファイル）
-cursor.json
-
-# IDEやエディタ関連
-.vscode/
+# IDE
 .idea/
+.vscode/
+*.swp
+*.swo
 
-# システム固有のファイル
+# Project specific
+checkpoints/
+runs/
+wandb/
+logs/
+data/
+*.ckpt
+*.pt
+*.pth
+*.bin
+*.h5
+*.onnx
+*.safetensors
+
+# OS specific
 .DS_Store
 Thumbs.db
-desktop.ini
 
-# その他不要なファイル
+# Temporary files
 *.log
 *.tmp
-
-# Pythonパッケージ関連
-*.egg
-*.egg-info/
-dist/
-build/
+*.temp
+.cache/ 
