--- a/config.json
+++ b/config.json
@@ -1,15 +1,6 @@
 {
     "model": {
-        "name": "meta-llama/Llama-3.2-11B-Vision-Instruct",
-        "vision_config": {
-            "image_size": 224,
-            "patch_size": 14,
-            "num_channels": 3,
-            "hidden_size": 1024,
-            "intermediate_size": 5120,
-            "num_hidden_layers": 32,
-            "num_attention_heads": 16
-        }
+        "name": "meta-llama/Llama-3.2-11B-Vision-Instruct"
     },
     "training": {
         "epochs": 3,
